table_3/results/Table-wrapper-csv-impl-post-nullaway-wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvReportPage.java:82: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return (i >= rows.length) ? null : new CsvTableRow(rows[i], i);
        ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableRow.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvTableCell.java:58: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return checkIndex() ? row[columnIndex] : null;
            ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:41: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, null);
             ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:41: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(null, null);
                   ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/table_csv-wpi-post/src/src/main/java/org/spacious_team/table_wrapper/csv/CsvCellDataAccessObject.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return (cell == null) ? null : cell.getRowAndIndex();
        ^
    (see http://t.uber.com/nullaway )
6 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 663ms
6
